# YTMASC

./: .gitignore  .markdownlint.json  config.yaml  defaultConfig.yaml  pyproject.toml  readme.md  requirements.txt  todo.md  ytmasc.py
.github/workflows/: release.yml  test.yml
scripts/: linuxpkgRequirements.sh  msys2Requirements.sh  strip_embeds.py  wingetRequirements.bat
tests/: conftest.py  test_basic.py  test_library.json
ytmasc/: __init__.py  __main__.py  converter.py  core.py  database_helpers.py  database_utilities.py  downloader.py  fetcher.py  fire_cli.py  intermediates.py  intermediates_cli.py  lib_tools.py  lib_utils.py  parser.py  tagger.py  tasks.py  tk_gui.py  utility.py  utils.py
ytmasc/dbtools/: comparison.py  comparison_utils.py  find_unpaired.py  matcher.py  matcher_utils.py  readme.md
