[project]
name = "ytmasc"
version = "0.1"
description = "Your offline music library with YouTube as it's backend!"
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "click>=8.3.0",
    "fire>=0.7.1",
    "keyboard>=0.13.5",
    "mutagen>=1.47.0",
    "pillow>=12.0.0",
    "prettytable>=3.16.0",
    "pyautogui>=0.9.54",
    "pyinstaller>=6.16.0",
    "yt-dlp>=2025.10.22",
    "ytmusicapi>=1.11.1",
]
